Implemented GET, POST /create

--- a/app/views/notes/index.scala.html
+++ b/app/views/notes/index.scala.html
@@ -11,6 +11,7 @@
             All notes are displayed here
         </h1>
         @for(note <- notes){
+            <h3> @note.id </h3>
             <a href="#"> @note.title </a>
             <h3> @note.content </h3>
         }
